--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 					<div class="logo-search col-sm-2">
 						<img class="pull-left" src="img/logo.png" />
 					</div>
-					<div class="col-sm-6">
+					<div class="col-sm-5">
 						<form method="POST" action="index.html">
 							<input type="search" required class="search">
 							<input type="submit" name="submit" value="Rechercher" class="submit">
 						</form>
 					</div>
-					<div class="user col-sm-2 dropdown">
+					<div class="user col-sm-3 dropdown">
 					    <a href="#" class="dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
 					    	Luke Chesser
 					    	<span class="caret">
@@ -85,7 +85,7 @@
 					</div>
 				</header>
 				<h2>Top Album</h2>
-				<div>
+				<div class="pull-right">
 					<a class="station" href="#">Start Station</a>
 				</div>
 				<section id="albums" class="row">
